--- a/features/article_detail/src/main/res/layout/fragment_article_detail.xml
+++ b/features/article_detail/src/main/res/layout/fragment_article_detail.xml
@@ -34,6 +34,10 @@
                     android:layout_height="200dp" />
 
                 <TextView
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_margin="16dp"
+                    app:layout_constraintVertical_bias="0"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     android:text="@{viewModel.article.desc}"
                     android:textSize="14sp"
                     android:textColor="@android:color/black"
